--- a/02-BackgroundImageSingleWebPage/BackgroundImage.css
+++ b/02-BackgroundImageSingleWebPage/BackgroundImage.css
@@ -15,19 +15,22 @@
     background-size: cover;
     color: white;
     background-attachment: scroll;
+    background-position: center; 
+
 }
 
 .folder-img {
     display: flex;
     justify-content: center;
-    align-items: center; 
-    width: 100%;
-    height: 800px;
+    align-items: center;
+    width: 100%; 
+    height: 900px;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
     background-attachment: fixed;
-    background-image: linear-gradient(rgba(191, 0, 134, 0.6), rgba(0, 0, 0, 0)), url(../02-BackgroundImageSingleWebPage/images/big.jpeg);
+    background-image: linear-gradient(rgba(207, 75, 167, 0.7), rgba(0, 0, 0, 0)), url(../02-BackgroundImageSingleWebPage/images/big.jpeg);
+    background-position: center; 
 
 }
 .small-img {
@@ -35,7 +38,7 @@
     justify-content: center;
     align-items: center; 
     width: 100%;
-    height: 800px;
+    height: 900px;
     background-image: url(../02-BackgroundImageSingleWebPage/images/folder-img.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -46,10 +49,10 @@
 }
 
 .gradient-img {
-    width: 100%;
-    height: 800px;
+    height: 900px;
     background-image: linear-gradient(to left top, #ff0000, #ff0034, #ff003c, #ff0077, #ff0095, #ff1d90, #ff2d8b, #ff3986, #ff6265, #ff9445, #ffc72c, #fff83d);
-     /* background: rgb(0,25,164);  //başqa variant
-    background: linear-gradient(90deg, rgba(0,25,164,1) 13%, rgba(114,12,161,1) 30%, rgba(223,0,158,1) 62%, rgba(218,0,0,1) 100%); */
+    
+    /* another option */
+    /* background: linear-gradient(145deg, rgba(0,25,164,1), rgba(114,12,161,1), rgba(223,0,158,1), rgba(218,0,0,1)); */
     
 }
