--- a/03-PageFooterWithIconAndFont/task.css
+++ b/03-PageFooterWithIconAndFont/task.css
@@ -9,20 +9,26 @@ body {
     font-weight: 700;
     letter-spacing: 3px;
     box-sizing: border-box;
-
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .main {
+    width: 100vw;
+    box-sizing: border-box;
     margin-top: 60px;
     display: flex;
-    margin-bottom: 90px;
     color: rgb(39, 63, 136);
+    margin-bottom: 90px;
 }
 
 /* info block */
 
 .info {
-    margin-left: 100px;
+    margin-left: 15%;
 }
 .info i {
     color: rgb(51, 133, 42);
@@ -32,19 +38,27 @@ span {
     color:  rgb(51, 133, 42);
     font-weight: 400;
 }
-
-/* .info p {
+.info p {
     margin: 0;
-} */
-
+} 
+.address {
+    margin: 20px;
+}
+.email {
+    margin: 20px;
+}
+.phone {
+    margin: 20px;
+}
 /*  registration */
 
 .contact {
-  width: 600px;
-  height: 410px;
+  box-sizing: border-box;
+  width: 38%;
+  height: 50%;
   background-color: white;
   border-radius: 9px;
-  margin-left: 370px;
+  margin-left: 280px;
   box-shadow: 0 0 7px rgba(73, 73, 73, 0.3); 
 }
 .contact h1 {
@@ -57,11 +71,11 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+
 }
 input{
     box-sizing: border-box;
-    width: 550px;
+    width:90%;
     height: 39px;
     margin-bottom: 17px;
     border: none;
@@ -74,7 +88,7 @@ input{
 }
 textarea {
     box-sizing: border-box;
-    width: 550px;
+    width: 90%;
     border: none;
     background-color:  rgba(182, 182, 182, 0.3);
     font-family: 'Inconsolata', monospace;
@@ -89,7 +103,7 @@ textarea {
 button {
     width: 100%;
     height: 50px;
-    margin-top: 35px;
+    margin-top: 25px;
     border-bottom-left-radius: 9px;
     border-bottom-right-radius: 9px;
     border: none;
@@ -111,6 +125,8 @@ button:hover {
 /* footer */
 
 footer {
+    box-sizing: border-box;
+    margin-top: auto;
     width: 100vw;
     height: 213px;
     background-color: rgb(30, 30, 30);
@@ -138,5 +154,5 @@ footer {
     font-weight: 400;
     color: white;
     text-align: center;
-    font-size: 14px;
 }
+
