--- a/07-FirstSCSSProjects/assets/sass/page/_home.scss
+++ b/07-FirstSCSSProjects/assets/sass/page/_home.scss
@@ -27,7 +27,7 @@
           margin-bottom: 7%;
           color: $details-color;
           transition: 0.35s;
-          &:hover{
+          &:hover {
             margin-bottom: 10%;
           }
         }
@@ -58,24 +58,23 @@
         overflow: hidden;
         position: relative;
         border: 10px solid $details-color;
-       .article-img-holder {
-        width: 100%;
-        height: 100%;
-        // background: url(/assets/images/tea.jpeg);
-        // background-position: center;
-        // background-size: cover;
-        // background-repeat: no-repeat;
-        transition: all 1s;
-        img {
-          width: 440px;
-          height: 300px;
+        .article-img-holder {
+          width: 100%;
+          height: 100%;
+          // background: url(/assets/images/tea.jpeg);
+          // background-position: center;
+          // background-size: cover;
+          // background-repeat: no-repeat;
+          transition: all 1s;
+          img {
+            width: 440px;
+            height: 300px;
+          }
         }
-    }
-  }
-    .article-img-holder:hover {
+      }
+      .article-img-holder:hover {
         transform: scale(1.2);
-    }
-     
+      }
 
       .text {
         width: 50%;
@@ -107,11 +106,16 @@
           }
         }
       }
-      //   @media only screen and (max-width: 992px) {
-      //     .main {
-      //       display: block;
-      //     }
-      // }
+    }
+    @media only screen and (max-width: 992px) {
+      .main {
+        display: block;
+        .text {
+          p, h2 {
+            width: 100vw;
+          }
+        }
+      }
     }
   }
 }
@@ -283,7 +287,7 @@
           font-size: 50%;
         }
         h1 {
-          font-size: 50%
+          font-size: 50%;
         }
       }
     }
