--- a/07-FirstSCSSProjects/assets/css/main.css
+++ b/07-FirstSCSSProjects/assets/css/main.css
@@ -221,7 +221,6 @@
 #services .container .service .box .card {
   margin: 2%;
   position: relative;
-  background-image: url("../images/product-1.jpeg");
   background-size: 100% 50%;
   background-repeat: no-repeat;
 }
@@ -261,6 +260,15 @@
 #services .container .service .box .card button:hover {
   background-color: #b7dd8d;
   color: #548124;
+}
+#services .container .service .box .img1 {
+  background-image: url("../images/product-1.jpeg");
+}
+#services .container .service .box .img2 {
+  background-image: url("../images/product-2.jpeg");
+}
+#services .container .service .box .img3 {
+  background-image: url("../images/product-3.jpeg");
 }
 
 @media only screen and (max-width: 768px) {
