--- a/07-FirstSCSSProjects/assets/css/main.css
+++ b/07-FirstSCSSProjects/assets/css/main.css
@@ -72,6 +72,10 @@
 #tea-station .container .main .article-container .article-img-holder {
   width: 100%;
   height: 100%;
+  background: url(../images/tea.jpeg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   transition: all 1s;
 }
 #tea-station .container .main .article-container .article-img-holder img {
@@ -80,6 +84,7 @@
 }
 #tea-station .container .main .article-img-holder:hover {
   transform: scale(1.2);
+  background-image: linear-gradient(rgba(39, 161, 26, 0.3), rgba(39, 161, 26, 0.3)), url(../images/tea.jpeg);
 }
 #tea-station .container .main .text {
   width: 50%;
