objectAndArray task added

--- a/07-FirstSCSSProjects/assets/sass/page/_home.scss
+++ b/07-FirstSCSSProjects/assets/sass/page/_home.scss
@@ -313,6 +313,10 @@
         h1 {
           font-size: 70%;
         }
+        .icon {
+          align-items: center;
+          text-align: center;
+        }
       }
     }
     button {
