--- a/07-FirstSCSSProjects/assets/css/main.css
+++ b/07-FirstSCSSProjects/assets/css/main.css
@@ -310,6 +310,10 @@
   .service .box .card h1 {
     font-size: 70%;
   }
+  .service .box .card .icon {
+    align-items: center;
+    text-align: center;
+  }
   .service button {
     margin-top: 5%;
     margin-bottom: 10%;
