rent page updated

--- a/14-ApartmentRentPage/assets/scss/page/_home.scss
+++ b/14-ApartmentRentPage/assets/scss/page/_home.scss
@@ -189,14 +189,17 @@
       }
       .time {
         p {
-          margin-left: 170px;
+          margin-left: 180px;
         }
         .fa-clock {
           margin: 9px 5px;
         }
         .icon {
-          margin: 9px 5px;
-          margin-left: 62px;
+          margin: 11px 5px;
+          margin-left: 60px;
+        }
+        .heating{
+          margin-left: 68px;
         }
       }
       margin-bottom: 10px;
