--- a/14-ApartmentRentPage/assets/css/main.css
+++ b/14-ApartmentRentPage/assets/css/main.css
@@ -210,14 +210,17 @@
   margin-left: 5px;
 }
 .box #main-section .space .time p {
-  margin-left: 170px;
+  margin-left: 180px;
 }
 .box #main-section .space .time .fa-clock {
   margin: 9px 5px;
 }
 .box #main-section .space .time .icon {
-  margin: 9px 5px;
-  margin-left: 62px;
+  margin: 11px 5px;
+  margin-left: 60px;
+}
+.box #main-section .space .time .heating {
+  margin-left: 68px;
 }
 .box #main-section .extra-Info {
   margin: 25px 0;
