--- a/14-ApartmentRentPage/assets/css/main.css
+++ b/14-ApartmentRentPage/assets/css/main.css
@@ -71,7 +71,6 @@
   height: 100vh;
   overflow-y: scroll;
   scrollbar-color: rebeccapurple green;
-  padding: 0 16px;
   box-shadow: 0px 0px 1px black;
   position: fixed;
 }
@@ -80,6 +79,7 @@
   display: none;
 }
 .box .scroll-bar h3 {
+  padding: 0 16px;
   margin-top: 15px;
   font-weight: 400;
   font-size: 24px;
@@ -88,7 +88,11 @@
   margin-top: 30px;
 }
 .box .scroll-bar p {
+  padding: 0 16px;
   margin: 15px 0;
+}
+.box .scroll-bar form {
+  padding: 0 16px;
 }
 .box .scroll-bar form input {
   border: none;
@@ -134,22 +138,33 @@
 }
 .box .scroll-bar .links {
   margin-top: 40px;
-  padding: 0 6px;
 }
 .box .scroll-bar .links ul .apartment-icon {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding: 0 18px;
+}
+.box .scroll-bar .links ul .apartment-icon:hover {
+  background-color: rgb(201, 201, 201);
 }
 .box .scroll-bar .links ul .sub-icon {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding: 0 18px;
+}
+.box .scroll-bar .links ul .sub-icon:hover {
+  background-color: rgb(201, 201, 201);
 }
 .box .scroll-bar .links ul .contact-icon {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding: 0 18px;
+}
+.box .scroll-bar .links ul .contact-icon:hover {
+  background-color: rgb(201, 201, 201);
 }
 .box .scroll-bar .links ul li {
   list-style: none;
@@ -157,7 +172,7 @@
 }
 .box .scroll-bar .links ul li a {
   text-decoration: none;
-  padding: 0 10px;
+  padding: 0 5px;
   color: black;
 }
 .box #main-section {
